--- a/bulletin-api/package.json
+++ b/bulletin-api/package.json
@@ -10,11 +10,14 @@
   "author": "naufal",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.489.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.9.4"
