Created upload feature using multer and multer s3

--- a/bulletin-api/.env
+++ b/bulletin-api/.env
@@ -2,3 +2,6 @@ PORT=3000
 DB_HOST=localhost
 DB_USER=alpha
 DB_PASS=
+AWS_KEY_ID=AKIAJJBPIJGYD4HGNO5Q
+AWS_SECRET_KEY=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
+AWS_BUCKET_NAME=socarbulletin
