--- a/bulletin-api/.env
+++ b/bulletin-api/.env
@@ -1,7 +1,9 @@
 PORT=3000
-DB_HOST=localhost
-DB_USER=alpha
-DB_PASS=
+DB_NAME=socarv1
+DB_HOST=socar-bulletin.chihlbpdlrf3.ap-southeast-1.rds.amazonaws.com
+DB_USER=postgres
+DB_PASS=socarpassword
+DB_PORT=5432
 AWS_KEY_ID=AKIAJJBPIJGYD4HGNO5Q
 AWS_SECRET_KEY=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
 AWS_BUCKET_NAME=socarbulletin
